--- a/Neff/Other/68830_EU_04_01.html
+++ b/Neff/Other/68830_EU_04_01.html
@@ -243,7 +243,7 @@
 	a.answerMan = new pearson.brix.utils.LocalAnswerMan();
 	a.submitManager = new pearson.brix.utils.SubmitManager(a.eventManager, a.answerMan);
 
-	a.bricLayer = new pearson.brix.BricLayer(null, a.eventManager, a.submitManager);
+	a.bricLayer = new pearson.brix.utils.BricLayer(null, a.eventManager, a.submitManager);
 
 	pearson.utils.logToConsole(true, "FINER");
 
