--- a/Neff/Other/AgeSimBirth.html
+++ b/Neff/Other/AgeSimBirth.html
@@ -16,10 +16,16 @@
 <!-- Body Content -->
 <figure>
 	
-	<div id="b15e0c5f0a2634580bcf30828629163e6" ></div>
-	<div id="bb1c1e22751b24148b998f6030ff7a776" ></div>
-	<div id="b265ccc70104940c085db245d11a04fd8" ></div>
-	<div id="b80d4cb5294d8411894be965d7984e0c4"></div>
+	<span data-containerid="childbirth-age-cntr"></span>
+	<div>
+        <span data-containerid="display-elapsed-years-cntr"></span>
+
+        <span data-containerid="display-total-pop-cntr"></span>
+    </div>
+
+    <div data-containerid="set-elapsed-years-cntr"></div>
+
+    <div data-containerid="population-graphs-cntr"></div>
 </figure>
 	
 	<script src="js/d3.v3.min.js"></script>
@@ -33,6 +39,15 @@
 		goog.require('pearson.brix.utils.BricLayer');
 	</script>
 	 -->
+<script>
+    //<![CDATA[
+        // The logToConsole abstracts the google closure logging configuration:
+        pearson.utils.logToConsole(true, 'FINER', 'pearson');
+
+        // This will write the version to the log at log level config.
+        pearson.utils.getVersion();
+    //]]>
+</script>
 
 <script>
 	// Create an object that will contain the objects needed for the activities
@@ -44,13 +59,20 @@
 	a.config =
 		{
 			"description": "Interactive Lab: The Effect of Age of First Childbirth on Population Growth",
+			"brixVersion": "1.1.0",
+            "targetSelectorValues":
+            [
+                "childbirth-age-cntr",
+                "set-elapsed-years-cntr",
+                "display-elapsed-years-cntr",
+                "display-total-pop-cntr",
+                "population-graphs-cntr"
+            ],
 			"containerConfig":
 				[
-					
-					
 					{
 						"description": "Age first birth",
-						"containerId": "b15e0c5f0a2634580bcf30828629163e6",
+						"containerId": "childbirth-age-cntr",
 						"brixConfig":
 							[
 								{
@@ -79,15 +101,15 @@
 									"instance": {"type": "ref", "domain": "brix", "refId": "dropdown3"},
 									"methodName": "draw",
 									"args":
-										[
-											{ "type": "d3select", "selector": "#b15e0c5f0a2634580bcf30828629163e6" }
-										]
+			                            [
+			                                { "type": "d3select", "targetSelectorIndex": 0 }
+			                            ]
 								}
 							]
 					},
 					{
 						"description": "container for year slider",
-						"containerId": "b265ccc70104940c085db245d11a04fd8",
+						"containerId": "set-elapsed-years-cntr",
 						"brixConfig":
 							[
 								{
@@ -106,6 +128,27 @@
 										}
 								}
 							],
+						"mortarConfig":
+		                    [
+		                        {
+		                            "mortarId": "resetYear",
+		                            "mortarType": "MethodCall",
+		                            "config":
+		                            {
+		                                "topic": "mortar-ageSim1-resetyear",
+		                                "methodName": "setValue",
+		                                "args": [ 0 ]
+		                            },
+		                            "configFixup":
+		                            [
+		                                {
+		                                    "type": "set-property",
+		                                    "name": "targetBlock",
+		                                    "value": { "type": "ref", "domain": "brix", "refId": "slider1" }
+		                                }
+		                            ]
+		                        }
+		                    ],
 						"hookupActions":
 							[
 								{
@@ -114,15 +157,15 @@
 									"instance": {"type": "ref", "domain": "brix", "refId": "slider1"},
 									"methodName": "draw",
 									"args":
-										[
-											{ "type": "d3select", "selector": "#b265ccc70104940c085db245d11a04fd8" }
-										]
+			                            [
+			                                { "type": "d3select", "targetSelectorIndex": 1 }
+			                            ]
 								}
 							]
 					},
 					{
 						"description": "container for year readout",
-						"containerId": "bb1c1e22751b24148b998f6030ff7a776",
+						"containerId": "display-elapsed-years-cntr",
 						"brixConfig":
 							[
 								{
@@ -136,24 +179,40 @@
 											"unit": "years: "
 										},
                                     "configFixup":
-                                        [
-                                            {
-                                                "type": "set-property",
-                                                "name": "node",
-												"value":
-													{
-														"type": "d3select",
-														"selector": "#bb1c1e22751b24148b998f6030ff7a776"
-													}
-											}
-
-                                        ]
+			                            [
+			                                {
+			                                    "type": "set-property",
+			                                    "name": "node",
+			                                    "value": { "type": "d3select", "targetSelectorIndex": 2 }
+			                                }
+			                            ]
 								}
-							]
+							],
+						"mortarConfig":
+		                    [
+		                        {
+		                            "mortarId": "displayYear",
+		                            "mortarType": "MethodCall",
+		                            "config":
+		                            {
+		                                "topic": "mortar-ageSim1-graphupdated",
+		                                "methodName": "setValue",
+		                                "propertyArgs": [ "year" ]
+		                            },
+		                            "configFixup":
+		                            [
+		                                {
+		                                    "type": "set-property",
+		                                    "name": "targetBlock",
+		                                    "value": { "type": "ref", "domain": "brix", "refId": "readout2" }
+		                                }
+		                            ]
+		                        }
+		                    ]
 					},
 					{
 						"description": "container for population readout",
-						"containerId": "bb1c1e22751b24148b998f6030ff7a776",
+						"containerId": "display-total-pop-cntr",
 						"brixConfig":
 							[
 								{
@@ -167,24 +226,40 @@
 											"unit": ""
 										},
                                     "configFixup":
-                                        [
-                                            {
-                                                "type": "set-property",
-                                                "name": "node",
-												"value":
-													{
-														"type": "d3select",
-														"selector": "#bb1c1e22751b24148b998f6030ff7a776"
-													}
-											}
-
-                                        ]
+			                            [
+			                                {
+			                                    "type": "set-property",
+			                                    "name": "node",
+			                                    "value": { "type": "d3select", "targetSelectorIndex": 3 }
+			                                }
+			                            ]
 								}
-							]
+							],
+						 "mortarConfig":
+		                    [
+		                        {
+		                            "mortarId": "displayTotalPop",
+		                            "mortarType": "MethodCall",
+		                            "config":
+		                            {
+		                                "topic": "mortar-ageSim1-graphupdated",
+		                                "methodName": "setValue",
+		                                "propertyArgs": [ "population" ]
+		                            },
+		                            "configFixup":
+		                            [
+		                                {
+		                                    "type": "set-property",
+		                                    "name": "targetBlock",
+		                                    "value": { "type": "ref", "domain": "brix", "refId": "readout1" }
+		                                }
+		                            ]
+		                        }
+		                    ]
 					},
 					{
-						"description": "container for interactive graph based on slider value",
-						"containerId": "b80d4cb5294d8411894be965d7984e0c4",
+						"description": "container for interactive graphs based on slider value",
+						"containerId": "population-graphs-cntr",
 						"brixConfig":
 							[
 								{
@@ -270,6 +345,7 @@
 									"mortarType": "AgeStructure",
 									"config":
 										{
+                                 			"id": "ageSim1",
                                  			"mortTopic": 0,
                                  			"fertilityTopic": 1
 
@@ -333,10 +409,10 @@
 									"type": "method-call",
 									"instance": {"type": "ref", "domain": "brix", "refId": "cntr2"},
 									"methodName": "draw",
-									"args":
-										[
-											{ "type": "d3select", "selector": "#b80d4cb5294d8411894be965d7984e0c4" }
-										]
+									 "args":
+			                            [
+			                                { "type": "d3select", "targetSelectorIndex": 4 }
+			                            ]
 								},
 								{
 									"description": "Append the graph to the svg container",
