--- a/Neff/Other/68830_EU_08_03.xhtml
+++ b/Neff/Other/68830_EU_08_03.xhtml
@@ -6,16 +6,17 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="Template for LabelSelector" name="description" />
     <title>LineGraph brix template</title>
-  
+
     <!-- brix.css contains styling for the interactive brix -->
     <link href="css/brix.css" rel="stylesheet" />
 </head>
 <body>
     <div id="target1"></div>
     <script src="js/d3.v3.min.js"></script>
-    
+    <script src="js/fastclick.min.js"></script>
+
     <script src="js/brixlib-compiled.js"></script>
-   
+
 
 <script>
  <![CDATA[
@@ -25,7 +26,7 @@
     var a = pearson.brix.activity;
 
     // The activity config that defines the brix and mortar for this page
-    // 
+    //
     // Set imgBaseUrl to imgBaseUrl": "http://localhost:8088/images/", or whatever server the IPS is running
     // on to serve the images that route, or just leave it empty ("imgBaseUrl": "",) to point to images
     // local to this html file
@@ -85,7 +86,7 @@
                                                                             },
                                                                             {
                                                                                 "name": "selectorLabel",
-                                                                                 "value": 
+                                                                                 "value":
                                                                                  {
                                                                                         "type": "constant",
                                                                                         "value": "INCREASE future impacts"
@@ -112,14 +113,14 @@
                                                                             {
                                                                                 "name": "caption",
                                                                                 "value": { "type": "constant", "value": "" }
-                                                                            }, 
+                                                                            },
                                                                             {
                                                                                 "name": "selectorLabel",
                                                                                 "value": {
                                                                                         "type": "constant",
                                                                                         "value": "DECREASE future impacts"
                                                                                     }
-                                                                            } 
+                                                                            }
                                                                         ]
                                                                 }
                                                             ]
