--- a/Neff/Other/68830_EU_08_04b.html
+++ b/Neff/Other/68830_EU_08_04b.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Template for Label Selector Image Carousel Brix" name="description">
-    
+
     <!-- brix.css contains styling for the interactive brix -->
     <link href="css/brix.css" rel="stylesheet">
 </head>
 <body>
     <div id="b46d6d3bc3a9f492db86fcf3af161fa67"></div>
     <script src="js/d3.v3.min.js"></script>
-    
+    <script src="js/fastclick.min.js"></script>
+
     <script src="js/brixlib-compiled.js"></script>
 
 <script>
@@ -21,7 +22,7 @@
     var a = pearson.brix.activity;
 
     // The activity config that defines the brix and mortar for this page
-    // 
+    //
     // Set imgBaseUrl to imgBaseUrl": "http://localhost:8088/images/", or whatever server the IPS is running
     // on to serve the images that route, or just leave it empty ("imgBaseUrl": "",) to point to images
     // local to this html file
