--- a/Neff/Other/68830_HP_02_01.html
+++ b/Neff/Other/68830_HP_02_01.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Template for Label Selector Image Carousel Brix" name="description">
-    
+
     <!-- brix.css contains styling for the interactive brix -->
     <link href="css/brix.css" rel="stylesheet">
 </head>
 <body>
     <div id="b8c42f914a2614384b276f7ce9bc11586"></div>
     <script src="js/d3.v3.min.js"></script>
-    
+    <script src="js/fastclick.min.js"></script>
+
     <script src="js/brixlib-compiled.js"></script>
 
 <script>
@@ -21,7 +22,7 @@
     var a = pearson.brix.activity;
 
     // The activity config that defines the brix and mortar for this page
-    // 
+    //
     // Set imgBaseUrl to imgBaseUrl": "http://localhost:8088/images/", or whatever server the IPS is running
     // on to serve the images that route, or just leave it empty ("imgBaseUrl": "",) to point to images
     // local to this html file
@@ -35,181 +36,181 @@
       {
         "brixConfig": [
           {
-            "bricId": "lblCarousel1", 
-            "bricType": "LabelCarousel", 
+            "bricId": "lblCarousel1",
+            "bricType": "LabelCarousel",
             "config": {
-              "id": "lblCrsl1", 
+              "id": "lblCrsl1",
               "imagesActualSize": {
-                "height": 401, 
+                "height": 401,
                 "width": 476
-              }, 
+              },
               "type": "textLabels"
-            }, 
+            },
             "configFixup": [
               {
-                "name": "images", 
-                "type": "set-property", 
+                "name": "images",
+                "type": "set-property",
                 "value": {
                   "elements": [
                     {
                       "properties": [
                         {
-                          "name": "URI", 
+                          "name": "URI",
                           "value": {
                             "parts": [
                               {
-                                "domain": "info", 
-                                "refId": "imgBaseUrl", 
+                                "domain": "info",
+                                "refId": "imgBaseUrl",
                                 "type": "ref"
-                              }, 
+                              },
                               {
-                                "type": "constant", 
+                                "type": "constant",
                                 "value": "img/68830_HP_02_01_S1.png"
                               }
-                            ], 
+                            ],
                             "type": "join"
                           }
-                        }, 
+                        },
                         {
-                          "name": "caption", 
+                          "name": "caption",
                           "value": {
-                            "type": "constant", 
+                            "type": "constant",
                             "value": "This age structure leads to a fast growth rate and increasing population."
                           }
-                        }, 
+                        },
                         {
-                          "name": "selectorLabel", 
+                          "name": "selectorLabel",
                           "value": {
-                            "type": "constant", 
+                            "type": "constant",
                             "value": "More young people<br />&#160;"
                           }
                         }
-                      ], 
+                      ],
                       "type": "object"
-                    }, 
+                    },
                     {
                       "properties": [
                         {
-                          "name": "URI", 
+                          "name": "URI",
                           "value": {
                             "parts": [
                               {
-                                "domain": "info", 
-                                "refId": "imgBaseUrl", 
+                                "domain": "info",
+                                "refId": "imgBaseUrl",
                                 "type": "ref"
-                              }, 
+                              },
                               {
-                                "type": "constant", 
+                                "type": "constant",
                                 "value": "img/68830_HP_02_01_S2.png"
                               }
-                            ], 
+                            ],
                             "type": "join"
                           }
-                        }, 
+                        },
                         {
-                          "name": "caption", 
+                          "name": "caption",
                           "value": {
-                            "type": "constant", 
+                            "type": "constant",
                             "value": "This age structure leads to a negative growth rate and decreasing population."
                           }
-                        }, 
+                        },
                         {
-                          "name": "selectorLabel", 
+                          "name": "selectorLabel",
                           "value": {
-                            "type": "constant", 
+                            "type": "constant",
                             "value": "More middle-aged people"
                           }
                         }
-                      ], 
+                      ],
                       "type": "object"
-                    }, 
+                    },
                     {
                       "properties": [
                         {
-                          "name": "URI", 
+                          "name": "URI",
                           "value": {
                             "parts": [
                               {
-                                "domain": "info", 
-                                "refId": "imgBaseUrl", 
+                                "domain": "info",
+                                "refId": "imgBaseUrl",
                                 "type": "ref"
-                              }, 
+                              },
                               {
-                                "type": "constant", 
+                                "type": "constant",
                                 "value": "img/68830_HP_02_01_S3.png"
                               }
-                            ], 
+                            ],
                             "type": "join"
                           }
-                        }, 
+                        },
                         {
-                          "name": "caption", 
+                          "name": "caption",
                           "value": {
-                            "type": "constant", 
+                            "type": "constant",
                             "value": "This age structure leads to a steady growth rate and stable population."
                           }
-                        }, 
+                        },
                         {
-                          "name": "selectorLabel", 
+                          "name": "selectorLabel",
                           "value": {
-                            "type": "constant", 
+                            "type": "constant",
                             "value": "Balanced age structure"
                           }
                         }
-                      ], 
+                      ],
                       "type": "object"
                     }
-                  ], 
+                  ],
                   "type": "array"
                 }
               }
             ]
-          }, 
+          },
           {
-            "bricId": "cntr1", 
-            "bricType": "SvgContainer", 
+            "bricId": "cntr1",
+            "bricType": "SvgContainer",
             "config": {
               "maxSize": {
-                "height": 500, 
+                "height": 500,
                 "width": 457
               }
             }
           }
-        ], 
-        "containerId": "b8c42f914a2614384b276f7ce9bc11586", 
-        "description": "Container for the LabelCarousel", 
+        ],
+        "containerId": "b8c42f914a2614384b276f7ce9bc11586",
+        "description": "Container for the LabelCarousel",
         "hookupActions": [
           {
             "args": [
               {
-                "selector": "#b8c42f914a2614384b276f7ce9bc11586", 
+                "selector": "#b8c42f914a2614384b276f7ce9bc11586",
                 "type": "d3select"
               }
-            ], 
-            "description": "Draw the svg container", 
+            ],
+            "description": "Draw the svg container",
             "instance": {
-              "domain": "brix", 
-              "refId": "cntr1", 
+              "domain": "brix",
+              "refId": "cntr1",
               "type": "ref"
-            }, 
-            "methodName": "draw", 
+            },
+            "methodName": "draw",
             "type": "method-call"
-          }, 
+          },
           {
             "args": [
               {
-                "domain": "brix", 
-                "refId": "lblCarousel1", 
+                "domain": "brix",
+                "refId": "lblCarousel1",
                 "type": "ref"
               }
-            ], 
-            "description": "Append the label image carousel to the svg container", 
+            ],
+            "description": "Append the label image carousel to the svg container",
             "instance": {
-              "domain": "brix", 
-              "refId": "cntr1", 
+              "domain": "brix",
+              "refId": "cntr1",
               "type": "ref"
-            }, 
-            "methodName": "append", 
+            },
+            "methodName": "append",
             "type": "method-call"
           }
         ]
