--- a/Neff/Other/68830_RE_04_03.html
+++ b/Neff/Other/68830_RE_04_03.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Template for Label Selector Image Carousel Brix" name="description">
-    
+
     <!-- brix.css contains styling for the interactive brix -->
     <link href="css/brix.css" rel="stylesheet">
 </head>
 <body>
     <div id="bc48a0159a5a5487e8a54fc1409bc3d7e"></div>
     <script src="js/d3.v3.min.js"></script>
-    
+    <script src="js/fastclick.min.js"></script>
+
     <script src="js/brixlib-compiled.js"></script>
 
 <script>
@@ -21,7 +22,7 @@
     var a = pearson.brix.activity;
 
     // The activity config that defines the brix and mortar for this page
-    // 
+    //
     // Set imgBaseUrl to imgBaseUrl": "http://localhost:8088/images/", or whatever server the IPS is running
     // on to serve the images that route, or just leave it empty ("imgBaseUrl": "",) to point to images
     // local to this html file
@@ -45,7 +46,7 @@
                                         {
                                             "id": "lblCrsl1",
                                             "imagesActualSize": { "height": 477, "width": 477 },
-                                            "displayWidth": 457 
+                                            "displayWidth": 457
                                         },
                                     "configFixup":
                                         [
